# ros2_motor_demo

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/motor_bringup/share/motor_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_bringup/share/motor_bringup/cmake/: motor_bringupConfig-version.cmake  motor_bringupConfig.cmake
install/motor_bringup/share/motor_bringup/config/: board.yaml
install/motor_bringup/share/motor_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/motor_bringup/share/motor_bringup/launch/: launch.py  probe_board.launch.py
install/motor_hw/lib/motor_hw/: board_probe_node
install/motor_hw/share/motor_hw/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/motor_hw/share/motor_hw/environment/: path.dsv  (+1 more)
install/motor_msgs/share/motor_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/motor_bringup/: CMakeLists.txt  package.xml
src/motor_bringup/config/: board.yaml
src/motor_bringup/launch/: probe_board.launch.py
src/motor_hw/: CMakeLists.txt  package.xml
src/motor_hw/src/: board_driver.cpp  board_driver.hpp  board_probe_node.cpp
src/motor_msgs/: CMakeLists.txt
src/motor_msgs/msg/: BoardStatus.msg
src/motor_msgs/srv/: ProbeBoard.srv
(+65 files in other folders)
